# PhoneGenie

./: .env  README.md  app.py  main OLD.py  main.py  pyproject.toml  requirements.txt
